base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitops-demo
  name: gitops-demo
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-demo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gitops-demo
    spec:
      containers:
      - image: "app-image"
        imagePullPolicy: Always
        name: gitops-demo
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
