base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitops-demo
  name: gitops-demo
  namespace: argocd
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: gitops-demo
  type: ClusterIP
