base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gitops-demo
    app.kubernetes.io/instance: gitops-demo
  name: gitops-demo
  namespace: argocd
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: gitops-demo
    weight: 100
  wildcardPolicy: None
